--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,13 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"robloach/component-installer": "*"
+		"laravel/framework": "4.2.*",
+	        "components/jquery": "2.1.1"
+	    },
+	    "config": {
+	        "component-dir": "public"
+		},
 	},
 	"autoload": {
 		"classmap": [
